get_item_with_image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -581,7 +581,7 @@ width: 10px;
 
 
 .sidebar-title {
-    color: #3dc6ab;
+    color: #109cbc;
     font-size: 25px;
     margin-bottom: 30px;
     text-transform: uppercase;
@@ -762,7 +762,7 @@ form.cart {
 .related-products-wrapper {
   margin-top: 30px;
 }
-.related-products-title {color: #3dc6ab;
+.related-products-title {color: #109cbc;
 font-size: 25px;
 margin-bottom: 30px;
 text-transform: uppercase;}
